--- a/frontend/templates/ChangePass.html
+++ b/frontend/templates/ChangePass.html
@@ -107,20 +107,9 @@
             <!-- Registration forms -->
             <h2 class="section-title">.</h2>
             <div class="row">
-                <div class="col-md-6" style="left:25%;">
+                <div class="col-md-6" style="left:30%;">
                     <!-- Default Elements -->
-                    <div class="card">
-                        <!-- <div class="card-header">
-                                        <h4>修改密码</h4>
-                                        <ul class="card-actions">
-                                            <li>
-                                                <button type="button" data-toggle="card-action" data-action="refresh_toggle" data-action-mode="demo"><i class="ion-refresh"></i></button>
-                                            </li>
-                                            <li>
-                                                <button type="button" data-toggle="card-action" data-action="content_toggle"></button>
-                                            </li>
-                                        </ul>
-                                    </div> -->
+                    <div class="card" style="width: 600px;">
                         <div class="card-header">
                             <h4>修改密码</h4>
                         </div>
@@ -129,33 +118,33 @@
                                 enctype="multipart/form-data" onsubmit="return false;">
                                 <div class="form-group">
                                     <label class="col-xs-12">用户名</label>
-                                    <div class="col-sm-9">
-                                        <div class="form-control-static">Username</div>
+                                    <div class="col-sm-12">
+                                        <div class="form-control-static" id=userName>userName</div>
                                     </div>
                                 </div>
                                 <div class="form-group has-success">
                                     <label class="col-xs-12" for="example-text-input-success">旧密码</label>
-                                    <div class="col-sm-9">
+                                    <div class="col-sm-12">
                                         <input class="form-control" type="text" id="example-text-input-oldPassword"
                                             name="example-text-input-oldPassword" placeholder="旧密码.." />
                                     </div>
                                 </div>
                                 <div class="form-group has-success">
                                     <label class="col-xs-12" for="example-text-input-success">新密码</label>
-                                    <div class="col-sm-9">
+                                    <div class="col-sm-12">
                                         <input class="form-control" type="text" id="example-text-input-newPassword"
                                             name="example-text-input-newPassword" placeholder="新密码.." />
                                     </div>
                                 </div>
                                 <div class="form-group has-success">
                                     <label class="col-xs-12" for="example-text-input-success">确认密码</label>
-                                    <div class="col-sm-9">
+                                    <div class="col-sm-12">
                                         <input class="form-control" type="text" id="example-text-input-reNewPassword"
                                             name="example-text-input-reNewPassword" placeholder="确认密码.." />
                                     </div>
                                 </div>
                                 <div class="form-group m-b-0">
-                                    <div class="col-xs-12">
+                                    <div class="col-xs-2" style="left: 85%;">
                                         <button class="btn btn-app" type="submit" id="submit">提交</button>
                                     </div>
                                 </div>
@@ -202,8 +191,9 @@
                     csrfmiddlewaretoken: '{{ csrf_token }}'
                 },
                 success: function (data) {
-                    alert(data.message);
-                    if (data.status == 200) username = data.username;
+                    if (data.status == 200) {
+                        $('#userName').text(data['userName'])
+                    }
                 }
             })
         });
