--- a/frontend/templates/Login.html
+++ b/frontend/templates/Login.html
@@ -62,8 +62,8 @@
                                         <form name="login">
                                             {% csrf_token %}
                                             <div class="form-group">
-                                                <label class="sr-only" for="frontend_login_username">Username</label>
-                                                <input type="username" class="form-control" id="frontend_login_username"
+                                                <label class="sr-only" for="frontend_login_userName">userName</label>
+                                                <input type="userName" class="form-control" id="frontend_login_userName"
                                                     placeholder="用户名" />
                                             </div>
                                             <div class="form-group">
@@ -123,17 +123,30 @@
     <script src="../../static/js/app.js"></script>
     <script src="../../static/js/app-custom.js"></script>
     <script>
+        $(document).ready(function () {
+            $.ajax({
+                type: 'GET',
+                url: '/GetIdentity/',
+                data: {
+                    csrfmiddlewaretoken: '{{ csrf_token }}'
+                },
+                success: function (data) {
+                    // alert(data.status);
+                    if (data.status == 200) window.location.href="/Index";
+                }
+            })
+        });
         $("#login").click(function () {
-            var username = document.getElementById('frontend_login_username').value;
+            var userName = document.getElementById('frontend_login_userName').value;
             var password = document.getElementById('frontend_login_password').value;
-            // alert(username + password);
-            if (username != "" || password != "") {
+            // alert(userName + password);
+            if (userName != "" || password != "") {
                 $.ajax({
                     type: 'POST',
                     url: '/userIdentified/',
                     // async: false,
                     data: {
-                        username: username,
+                        userName: userName,
                         password: password,
                         csrfmiddlewaretoken:'{{ csrf_token }}'
                     },
