--- a/frontend/templates/UserManage.html
+++ b/frontend/templates/UserManage.html
@@ -242,7 +242,7 @@
                                 </div>
                                 <div class="modal-footer">
                                     <button class="btn btn-sm btn-default" type="button" data-dismiss="modal">取消</button>
-                                    <button class="btn btn-sm btn-app" type="button" data-dismiss="modal"><i class="ion-checkmark"></i> 确定</button>
+                                    <button class="btn btn-sm btn-app" type="button" data-dismiss="modal" onclick="deleteUser()"><i class="ion-checkmark"></i> 确定</button>
                                 </div>
                             </div>
                         </div>
@@ -312,10 +312,22 @@
         <script src="../../static/js/pages/base_tables_datatables.js"></script>
         <script type="text/javascript">
             var users;
-            var now;
+            var userId;
             // var name="";
             $(document).ready(function()
             {
+                $.ajax({
+                    type: 'GET',
+                    url: '/GetIdentity',
+                    dateType: "json",
+                    success: function (data){
+                        console.log(data.authorityNo)
+                        if(data.authorityNo!=1){
+                            alert("您无权访问此页面")
+                            window.location.href="/Index";
+                        }
+                    }
+                })
                 $.ajax({
                     type: 'GET',
                     url: '/UserList',
@@ -342,35 +354,48 @@
                                  +"</div></td></tr>"
                             $("#userListTable").append(str)
                         }
-                        alert(data.message);
+                        // alert(data.message);
 
                     }
                 })
             });
             function getForm(name){
                 console.log("调用了getform"+name);
-                now=name;
-                // document.getElementById("POP3option").checked=false;
-                // changeState(num);
+                userId=name;
+                $.ajax({
+                    type: 'POST',
+                    url: '/UserStates/',
+                    dateType: "json",
+                    data: {
+                        userId:userId,
+                        csrfmiddlewaretoken:'{{ csrf_token }}'
+                    },
+                    success: function (data){
+                        console.log("data.SMTPstate"+data.SMTPstate)
+                        if(data.SMTPstate==1) document.getElementById("SMTPoption").checked=true;
+                        if(data.SMTPstate==0) document.getElementById("SMTPoption").checked=false;
+                        if(data.POP3state==1) document.getElementById("POP3option").checked=true;
+                        if(data.POP3state==0) document.getElementById("POP3option").checked=false;
+                    }
+                })
             }
             function changeState(){
                 var op1=SMTPoption.checked;
                 var op2=POP3option.checked;
-                console.log(now+"的SMTP状态是"+op1)
-                console.log(now+"的POP3状态是"+op2)
+                console.log(userId+"的SMTP状态是"+op1)
+                console.log(userId+"的POP3状态是"+op2)
                 if(op1==true){
                     console.log("选项1开启")
                     $.ajax({
                     type: 'POST',
                     url: '/StartSMTP',
-                    // async: false,
                     dateType: "json",
                     data: {
-                        userId:now,
+                        userId:userId,
                         csrfmiddlewaretoken:'{{ csrf_token }}'
                     },
                     success: function (data) {
-                        alert(data.message);
+                        console.log(data.message);
                     }
                 })
                 };//开启SMTP
@@ -380,10 +405,9 @@
                     $.ajax({
                     type: 'POST',
                     url: '/StopSMTP',
-                    // async: false,
                     dateType: "json",
                     data: {
-                        userId:now,
+                        userId:userId,
                         csrfmiddlewaretoken:'{{ csrf_token }}'
                     },
                     success: function (data) {
@@ -397,10 +421,9 @@
                     $.ajax({
                     type: 'POST',
                     url: '/StartPOP3',
-                    // async: false,
                     dateType: "json",
                     data: {
-                        userId:now,
+                        userId:userId,
                         csrfmiddlewaretoken:'{{ csrf_token }}'
                     },
                     success: function (data) {
@@ -413,10 +436,9 @@
                     $.ajax({
                     type: 'POST',
                     url: '/StopPOP3',
-                    // async: false,
                     dateType: "json",
                     data: {
-                        userId:now,
+                        userId:userId,
                         csrfmiddlewaretoken:'{{ csrf_token }}'
                     },
                     success: function (data) {
@@ -424,10 +446,22 @@
                     }
                 })
                 };//关闭POP3
-                // location.reload();
+                location.reload();
             }
             function deleteUser(){//删除用户
-
+                $.ajax({
+                    type: 'POST',
+                    url: '/DeleUser',
+                    dateType: "json",
+                    data: {
+                        userId:userId,
+                        csrfmiddlewaretoken:'{{ csrf_token }}'
+                    },
+                    success: function (data) {
+                        alert(data.message);
+                    }
+                })
+                location.reload();
             }
 
         </script>
